Revamp documentation: streamline README, add module READMEs
- Update SNAPSHOT links to 7.1.0
- Add container resource limits (cgroup) to Supported Features
- Add CodeRabbit badge, fix contributors link
- Create oshi-benchmark/README.md with JMH usage docs
- Create oshi-demo/README.md with jbang quick start
- Streamline main README: short module summaries linking to detailed READMEs
- Mirror changes to src/site/markdown/index.md with escaped URLs